--- a/fr/portraits.html
+++ b/fr/portraits.html
@@ -7,13 +7,9 @@
     <meta
       property="og:image"
       content="https://www.philboivin.com/img/philboivin-og.jpg"><link rel="icon" type="image/png" href="/img/icon.png">
-<link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
     <script src="/js/jquery/3.5.1/jquery.min.js"></script>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.5/css/nanogallery2.min.css"
-      rel="stylesheet"
-      type="text/css"
-    >
+    <link href="/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
