--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -54,7 +54,7 @@
     </script>
 
     <!-- Load the gallery integration -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.5/jquery.nanogallery2.min.js"></script>
+    <script src="/js/jquery.nanogallery2.min.js"></script>
     <script src="/js/pb.lib.js"></script>
 
     <script>
