Adding new project.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
               <h1 class="lang-en">Projects</h1>
               <h1 class="lang-fr">Projets</h1>
                <ul>
-                                  <li>
+                  <li>
+                    <a href="https://github.com/philboiv1n/todolist">To-Do List</a> :
+                    <span class="lang-en">Simple multi-user to-do list built with plain PHP and SQLite.</span>
+                    <span class="lang-fr">Liste de tâches multi-utilisateur, développée en PHP et SQLite.</span>
+                  </li>
+                  <li>
                     <a href="https://myetl.philboivin.com">MyETL</a> :
                     <span class="lang-en">A simple, modular data pipeline in PHP.</span>
                     <span class="lang-fr">Un pipeline de données simple et modulaire en PHP.</span>
