Adding new project (secure).

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                     <span class="lang-en">Simple multi-user to-do list built with plain PHP and SQLite.</span>
                     <span class="lang-fr">Liste de tâches multi-utilisateur, développée en PHP et SQLite.</span>
                   </li>
+                   <li>
+                    <a href="https://secure.philboivin.com">Secure</a> :
+                    <span class="lang-en">A single-page, client-side tool to secure (encrypt) and open (decrypt) files in the browser.</span>
+                    <span class="lang-fr">Un outil monopage, côté client, pour sécuriser (chiffrer) et ouvrir (déchiffrer) des fichiers dans le navigateur.</span>
+                  </li>
                   <li>
                     <a href="https://myetl.philboivin.com">MyETL</a> :
                     <span class="lang-en">A simple, modular data pipeline in PHP.</span>
