Update to contact section.

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 
                <p class="lang-en">
                 The easiest way to contact me is via
-                <a href="https://www.linkedin.com/in/philboivin/" target="_blank" rel="noopener">LinkedIn</a> or <a href="https://github.com/philboiv1n" target="_blank" rel="noopener">GitHub</a>.
+                <a href="https://www.linkedin.com/in/philboivin/" target="_blank" rel="noopener">LinkedIn</a>.
               </p>
 
               <p class="lang-fr">
                 La meilleure façon de me contacter est via
-                <a href="https://www.linkedin.com/in/philboivin/" target="_blank" rel="noopener">LinkedIn</a> ou <a href="https://github.com/philboiv1n" target="_blank" rel="noopener">GitHub</a>.
+                <a href="https://www.linkedin.com/in/philboivin/" target="_blank" rel="noopener">LinkedIn</a>.
               </p>
             </div>
           </div>  
